# broiler_management_app_backend

./: .dockerignore  .env  .env.example  .env.production.example  .gitignore  .woodpecker.yml  API_DOCUMENTATION.md  Dockerfile  ENVIRONMENT_SETUP.md  Makefile  README.md  debug_db_url.py  debug_mpesa.py  docker-compose.yaml  docker-compose.yml  pyproject.toml  render.yaml  reproduce_500.py  start.sh  test_perf.py  verify_api.py  verify_people_api.py
alembic/: env.py
alembic/versions/: 01c8887d5e75_add_role_column_to_users.py  03fa41b70882_add_checkout_request_id_to_sale.py  1b63a44a336f_ensure_subscription_table.py  1e96a363f0f6_enable_rls_on_core_tables.py  25ac35a4896b_link_expenditure_to_inventory.py  311c4aa95e74_add_performance_indexes.py  334dab4bd164_create_inventory_history_table.py  3f0262fe06e5_add_is_superuser_to_users.py  42ca4edb20a3_make_alert_flock_id_nullable.py  477eb95ed329_add_performance_indexes.py  4a7b2c1d8e9f_add_checkout_request_id_to_expenditures.py  5091c024f4b4_add_full_features.py  59cf8fa5d064_add_community_and_missing_tables.py  60cf8fa5d065_fix_missing_columns.py  61ac5c0148ab_add_settings_resources_tasks_v3.py  665ba203e0cf_add_subscription_table.py  6c42fc395c02_add_show_discount_to_plans.py  71e63daf3e91_make_email_and_password_nullable.py  76a056426884_initial_schema_with_all_tables.py  a1b2c3d4e5f6_add_cost_tracking_fields.py  a8b2c3d4e5f6_add_subscription_plan_model.py  afd05f842d7b_add_audit_logs_table.py  b044cf7a3c33_update_flock_model.py  b9cea8597f4f_add_vet_and_market_tables.py  d4df720dd8fe_migrate_amounts_to_decimal_and_remove_.py  d5bc38ca6bd5_add_preferences_to_users.py  da1afc939ab6_add_notes_to_mortality_event.py  e3e9aeb3106c_add_farm_member.py  e4a3b8c9d0f1_rls_bypass_and_admin_access.py  e4c283e9ade4_add_people_models.py  ea560e676485_add_checkout_request_id_to_subscriptions.py  f01c93fc1c84_initial_schema.py  f2fe9e107929_add_apikey_and_update_alert.py  fbd6ee72c5a9_add_farms_table.py  fe04bcc53389_add_billing_period_to_subscriptions.py
app/: config.py  debug_validation.py  main.py  scratch_debug_pydantic.py
app/api/: deps.py
app/core/: logging.py  security.py  vaccination_schedule.py
app/db/: base.py  session.py
app/schemas/: ai.py  alert.py  audit.py  billing.py  biosecurity.py  community.py  config.py  daily_check.py  farm.py  finance.py  flock.py  health.py  inventory.py  market.py  people.py  resource.py  role.py  scheduled_task.py  user.py  user_setting.py
app/services/: __init__.py  alert_service.py  analytics_service.py  audit_service.py  base_event_service.py  (+10 more)
docker/: Dockerfile  nginx.conf
scripts/: build.sh  cleanup_multitenancy.py  create_test_user.py  fix_multitenancy.py  fix_multitenancy_ast.py  generate_secret.py  init_db.sql  pre-commit-hook.sh  pre-commit-tests.sh  seed_plans.py
tests/: conftest.py  test_admin_mock.py  test_auth_otp.py  test_config_validation.py  test_isolation.py  test_isolation_repro.py  test_main.py
(+62 files in other folders)
