[tool.poetry]
name = "broiler-farm-api"
version = "1.0.0"
description = "Broiler Farm Management System API"
authors = ["Fred <fred@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"

asyncpg = "^0.29.0"
structlog = "^24.1.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
celery = "^5.3.6"
redis = "^5.0.1"
flower = "^2.0.1"
email-validator = "^2.3.0"
httpx = "^0.26.0"
gunicorn = "^23.0.0"
africastalking = "^2.0.2"
sentry-sdk = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
httpx = "^0.26.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
pylint = "^3.0.3"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "redefined-outer-name",
    "unused-argument",
    "broad-exception-caught",
    "raise-missing-from",
    "no-member",
    "not-callable",
    "import-outside-toplevel",
    "logging-fstring-interpolation",
    "duplicate-code",
    "invalid-name",
    "unused-import",
    "wrong-import-order",
    "wrong-import-position",
    "ungrouped-imports",
    "line-too-long",
    "unnecessary-pass",
    "too-many-branches",
    "too-many-statements",
    "protected-access",
    "no-else-return"
]
